# ChangeLog for net-print/cups
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-print/cups/ChangeLog,v 1.647 2014/10/16 22:39:19 tamiko Exp $

  16 Oct 2014; Matthias Maier <tamiko@gentoo.org> cups-1.7.5-r2.ebuild,
  cups-2.0.0-r2.ebuild:
  rekeyword cups-2.0.0-r2; drop ~x86-fbsd due to missing cups-filters dep

*cups-1.7.5-r2 (16 Oct 2014)
*cups-2.0.0-r2 (16 Oct 2014)

  16 Oct 2014; Matthias Maier <tamiko@gentoo.org> +cups-1.7.5-r2.ebuild,
  +cups-2.0.0-r2.ebuild, -cups-1.7.5-r1.ebuild, -cups-2.0.0-r1.ebuild,
  cups-1.7.9999.ebuild, cups-9999.ebuild:
  update linguas (#523738); fix systemd configuration and dependency; keyword
  2.0.0 with ~x86

  15 Oct 2014; Matthias Maier <tamiko@gentoo.org>
  files/cups-2.0.0-rename-systemd-service-files.patch:
  make patch compatible with patch-2.6.1

*cups-2.0.0-r1 (15 Oct 2014)

  15 Oct 2014; Matthias Maier <tamiko@gentoo.org> +cups-2.0.0-r1.ebuild,
  -cups-2.0.0.ebuild, files/cups-2.0.0-rename-systemd-service-files.patch:
  fix systemd unit files

  15 Oct 2014; Matthias Maier <tamiko@gentoo.org> cups-1.7.9999.ebuild:
  Apply CXX fix to 1.7.999 as well

  15 Oct 2014; Mike Gilbert <floppym@gentoo.org> cups-1.7.5-r1.ebuild,
  cups-2.0.0.ebuild, cups-9999.ebuild:
  Also force CXX, bug 524340.

*cups-1.7.5-r1 (15 Oct 2014)
*cups-2.0.0 (15 Oct 2014)

  15 Oct 2014; Matthias Maier <tamiko@gentoo.org> +cups-1.7.5-r1.ebuild,
  +cups-2.0.0.ebuild, cups-1.7.9999.ebuild:
  revbump; verbose build log and use correct compiler (bug 524338 524340); also
  fix 1.7* live ebuild

  21 Sep 2014; Andreas K. Huettel <dilfridge@gentoo.org> -cups-1.7.1-r1.ebuild,
  -cups-1.7.3.ebuild, -cups-1.7.4.ebuild,
  -files/cups-1.5.0-systemd-socket-2.patch, -files/cups-1.7.1-str4356.patch,
  -files/cups-1.7.3-noavahi.patch:
  Remove old

  21 Sep 2014; Markus Meier <maekke@gentoo.org> cups-1.7.5.ebuild:
  arm stable, bug #519792
