@@ -9,4 +9,4 @@ RDEPEND=sci-biology/bowtie
 SLOT=0
 SRC_URI=http://tophat.cbcb.umd.edu/downloads/tophat-1.0.12.tar.gz
 _eclasses_=autotools	ebea507d219855923e3438c953cf4ab8	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	toolchain-funcs	6ce35cb0d56d962486c858d41604c820
-_md5_=bed3238655d3ca64cfcdfe0275783ed3
+_md5_=b790f1b957c38ed05a3b2d9f7655af1c
