@@ -12,24 +12,24 @@ DIST cups-2.0.0-source.tar.bz2 8737532 SHA256 83fdbbcb4ac4d82949bbde6d5dce7a4b6a
 EBUILD cups-1.7.5-r2.ebuild 10644 SHA256 53623183bc783e90eaa712d50aeb8ff948a9a4eb8992cb89ed7c812659b10c2f SHA512 ac11ae5d4084c64461ff35785c5ab70d4ff8558fae4cdc0ab68c53e389edf0003ade71901a71098c5e18a82bc18900f77036355d908127fcab57a53b4324f451 WHIRLPOOL 91fd5da43f62d96af58928c52bdbfaa162a9d14f1a8d0f95817dd5531db16ecda23852b096dae0fa454f8a02b38abbad7e6d0a5866cf8042bc32b18fc5e2d75f
 EBUILD cups-1.7.5.ebuild 10410 SHA256 9f01ae032b20ec62a6a0467dbbdf538451513f6ca0b931db94fc093ecefdd49b SHA512 240d4ac1d4533832977aca84a418e2b4ebee1e35f6417d616da3e99a6d5b72b9216baaf0a00e517e3a6cda7e1e9f7bc6d544c6d7241ac87dbf1ecc95975cc832 WHIRLPOOL 25b4dc4a9a6660529a849ede0b9ce2ebbf9390c7310479f5b835589a783f36bb9da428e788337a45e09f96fce63765fcedbeee590647e36499c0ddcc5d4e5b8f
 EBUILD cups-1.7.9999.ebuild 10599 SHA256 2b281794709ba2dc61104df9f961e6c8b345095aa871e49907f37d75a78fa222 SHA512 9c801fab681ede06fb47f8887b322f9a3b307495f6a3c929fa3d0bcc1e3af965a2c327b9efbd18d0aeec58dea2aab3afcbcb4c3eb8bf949faea8d2c1a275e9c6 WHIRLPOOL 6e9f600e493d4a1e62911b70ddde812756e205147a7b6eb59a5f1102ca41e4e0ab2f8c11843da5bd30eb4e9775624211ab7959328e7c7ffce9c0503d705356cc
-EBUILD cups-2.0.0-r2.ebuild 10285 SHA256 7040d633861e2baee26176dfbb3dea3546f462054ba994a6444cf57c319fc7de SHA512 6c23d39c0a27c39e8ecb8d6e0123fdcade44937203ec2e3d635c1f30573cd93f21932a79f0d2d196992b86f2f7ad0e665c8feecaf6a85bd561ec6a756e8e006c WHIRLPOOL fd197993a5996a256418e219d457afd6da2ecf06d697fa5a49552cedeb4fd0e03b296795713899005ae602a77ddb505186370f417d4060a57d33751d17e7d8dd
-EBUILD cups-9999.ebuild 10308 SHA256 942d69888759df436eda1142f38c6739e4af7311928ea5c2d14386565aefb319 SHA512 e2f324424e149d1229f9edbe7d7321bdbdb212ea79045c20c21c04efeec3bd9bb06dd3b0ad92c78c53ca356df4d6fe406cf9d887cc9c29939e61a9aca2894d35 WHIRLPOOL f235c08ac4f4e1327df456cf90885ec5a3964593956179aa6c023a09d669a13d4bf1f3b7905aa71ad60cb519811ce83e32d79d4769c5faac9d52cd42935ada43
-MISC ChangeLog 97829 SHA256 5e0a6133e7d547aff8ab3679967e3ce7af59ee2d70711f3a5f3549917a6a1ec7 SHA512 121b3cd9b79844e7dc42aeaca37779557f8f3d34d361458c7c938f5a95e779078254fc265150562ceaba66a4284879acbe56b07657e1b459d25c3c41737627d3 WHIRLPOOL 87b5a7d23ea2410472fa5d7541fd870310db005c653b8be73eff72eea7ea8c1b29228f1f91882888b981705d843009cb336f8dd51ca4e9e5c35e368af0f64be6
+EBUILD cups-2.0.0-r2.ebuild 10334 SHA256 48a2c9a121aba132a01371afef54e36acf4d7af3647512ef971a263f5c29a553 SHA512 2cdf1a3ab420bc2b951f0d2081fde8129e32d24c40ffbeb1a2578a852b007dd69ef190167794872bd5986a7c216016006ee683d6ef9a4148e954432ad142d02e WHIRLPOOL 69b92d829c2a81e835b3552035de6488dd13e058a82ed48aeae1739090bb786b08d7b66a0cecd6784c4f8ba9efaca306926413feaa0257c7644e3601bb7c8377
+EBUILD cups-9999.ebuild 10357 SHA256 a26c297092d0892efadf49d32da75c43c9839ca23e8549f04b552b286ef6b8ce SHA512 e5926ce6f6383280d65dd63dd87319b6b779ebc4bd80b7528dd7913be0d5229b5a6c982bb135db7a2d5224052af3da789c1b48a4a3ccba58421928a499eb77a7 WHIRLPOOL 66b5dcbdf5f398c6363320a01d9bfd296d2f9f8a5a4f086793b3da3c51c4a32619735b1738138174400b97a078e93c7a9397550d9406d0d7aaa9d9c06e9b5556
+MISC ChangeLog 97985 SHA256 7756a374cc18ffb0b124d679a24c88e423653669e8fd5e8fb5ea3944dad0bded SHA512 9ec4e2d4fcde45ec46466ef69416807df46af3f4422d218dc84216c4e586bd9e4b3151f5835719b2ed5649a6f051a67e4e446649eb0a4ef2a898a2f29ac32384 WHIRLPOOL b3e199142aa98be7112f30c377aaf60d3b681d0e641a23f11c84ca4a05eedb0a217472d2996fd1c8b92aa758fb96f1f12aabd5d122687ebbef866456b760b105
 MISC metadata.xml 496 SHA256 732bba7ee060b7be5e0b23d06d24c12c2bfc1c6be1440cdfebe6d5d94d145c47 SHA512 713300abb461ad923c4f6e59326fa97b2372181df4ef82bf04dd6f2d68dc0eb7c34e518cbb40ebd535cb9c4bf52d2648512002cc2cb55c6f21406cc973fa4496 WHIRLPOOL 061013ee6ddaf510964589024e39c4a05f18f0a6d2488eb5b121bb962a378348e71261f7e153f34dbb33337a2e49eb7da94e52d0cb7a128d71e9b4466f8a5933
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQIcBAEBCAAGBQJUQEkKAAoJELhOzYlK7nn/qOEP/AwM7TeCn8PeR16EDkIWpUCA
-Z/NSjQD08+KegJnT60MTxRnzLO/+Oz1ZviIPUSGwZ2kI1dy1ST8BCnBiQbWeda47
-6UNSDN4I8ZyvC83nqwDfTWvcUag2se9exGA8ErFCGinCP4VkHTxf/3S3owgShkrU
-m1T3ueVcx02ycDQwiPZaw3ShHaUjnJuTyJIPYn3pDIqkw4tEkBm8OLKk+vHU/6Eb
-rXLHgymzHycCPiZkBhBwm/C0fDBFShBpoDZFXklZ1d3gF1fsFy5FtJjQcf8r3NHD
-wrSTieltmm56aiZFRcZRYTQse+lUHnWrfUKtl4StpDtewV7dy9U1h2nDfPYD4bbh
-hHdrrsT02TfEkobatvdYVeZ4XZZFVqj3XAFZ7NXKlMxQin5y3+2WzvgwxYfYQWhj
-ye5sW2LexT+0KOGGtqVRtp6KnAZPA2QKsCPbsHE8shgdS89aVer1CJxPN1VWt1yy
-cZyYoJKduTecAKltZ8erzbgnvJYXPqTk3j2SkK9lpPzD+RaOyw5NAjWent2Gui63
-pdyPFvYCoj8rAqAOsxFMQsYJZzwQFRy1KHmXanF4IExi15+LDPmFoT5lSNp1rf5r
-BdLMwQE/JnIoBMX6n8odB/SHNqix0PWD+gYvaLVOG0M7kCsn1gXopvxAKg+qpyv0
-UQrhWYzMKNyChMigUJ3E
-=AGCw
+iQIcBAEBCAAGBQJUQNOrAAoJELhOzYlK7nn/IZsP/1ePbBjUuwRYGOkFOrTGuXEl
+r0Qq6vcog4K92hcyaeHkDMb5xYqoQnWW/4mRQnLYjxaGi9LbZnYanoiWUuyAJGqv
+viic3AwXAUuPZFnNA+VMNHYNLfEFyqt8urpaL+pjCAWAQTQs3pSUSbEn0zVvJlzw
+lekd98okkJJepdSwYXTBjdxRxGWlP7dorreVCz7mxWRfKcSMF2NqaC2EOScXeeQT
+cy/f72+VEC7shRI80tGnreS1BQ8kYrAle3pNQ+K3bSk9m4c3cvbStsdwKhQvU6ca
+xSFknN7Q5t/wKs9DbLUQLuwWNTjah7mJmyKQJVCnJUCpby6GEuJqgFsjtrnGbjGm
+cbqMeYDfZZ+y9XTapd6a9NP3eoknVh85OFYe+8e7Jb9oyD4rDotdTRyR/e7FeoBl
+S9mRiEZqJxWp8Sx5E7gcBqubZzvROOdBiOqUlgvs9IzEWSt4owfvF6xAUmaOIW+U
+7QeEFA82XgKAAVzNUBWsyM1UaJnsi5Te8OsYAN98Sp/cxRkZ2kDF8S98jDyPKZ5i
+S0PRlr8RdOXuvDc85IAbbVJXzad4s4cgBSJRlJsu1wcv7REQfErltLiHUEJo92gz
+loNhE6SJ087vCxXSJzeDp4CPOrX+Eedzgr2PJsKmlOW+xZCjSV5TNNOmCgM+dw/Q
+sZfZ3vFBUgfbAHufYVAn
+=WkXw
 -----END PGP SIGNATURE-----
