@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX tophat-2.0.2-flags.patch 4717 SHA256 629bb862c0cf57001622205a0f67540867c0eba33dcd6118e07d4b7ed6ee1603 SHA512 f62047f6c57e30fa1ddd9e985b19b4c7d038f941136ec3ffb3998fe3e595d0d4db478b3530bf47d56bbd213fde3e773cf8dee842eab429543b91267bfba42710 WHIRLPOOL ae15cd1e6ef6eedcc99e84e120e1c92d8bed804aafc9d1ec6f04ba0a4def227e352d51cc6f1e5a8cf6e31b9406e0ce0ee55a6878edf8b7c4068806204989db23
 AUX tophat-2.0.8-flags.patch 4293 SHA256 da67d3186061d70cfb2b3b30073d189f2a3ab9a48fd06787ea895fbd85bf86a3 SHA512 297ba56bce4aaf991ad29bd198f73396e8a49e85ef69384c514e8fdb6afbb7715649f9628f2bcfd22b1618cbd64b5b61b67b596f7c971eea16443a5a90fafc92 WHIRLPOOL 1e162bfbf31588aa1bf25f07e45fae93955530e94f9f24a1a438e30df4303aaf22248946e0d49b29a77ccaf83098aaa81ba6f271179fb7a5fce8861acbf7c493
@@ -10,30 +10,22 @@ DIST tophat-2.0.0.tar.gz 1750811 SHA256 1c45812225906fd014ed9671a3696727c6ed0cc5
 DIST tophat-2.0.2.tar.gz 1759933 SHA256 f9e40ae123dab24d2f2d6896ebf191c8ae3c05c80da6d4d965defe7579d553e0 SHA512 8341d406bfc2b86323932a151ad60469c6d50031bace433c5e3b6678a92eaed3516744fb9077d0e8944018275642050e2e9aca0126b4dd69423754c3dc9ae83c WHIRLPOOL 45a52fc96b258f4ae0b5b7a4d1dc4c22885e0b9230891dde1db85671deeceb3213008de02878cc3b1f9dc6af68b40bc897f691a1835bd4abf29d1a2bde42e1c2
 DIST tophat-2.0.8.tar.gz 1757036 SHA256 07d323d295effc99d4e261439c5ba2e10d5530af078e5de97c1a7bf1cbdd0da1 SHA512 c69360cc2f558c37d14b6a0e006f2483771ce5cdb42dc8397dd15a944a61d762843158adbf7c2bc89c2d4db46d9a02633dbd2721bf3376ef5d3ae6fb153db100 WHIRLPOOL a97ad6d47be23089605578a6f8ff9434afcb27a9fa58118b5b923af1d79530614af9fcaf5ebda2043603bf2dd8b10c2b7636e7b14662b9ab4f6e2059da4cb2b2
 DIST tophat-2.0.9.tar.gz 1766681 SHA256 9b506bbfdbb14b296d804557a50f41cc167480dfeed66a31c33e2ffb580afd38 SHA512 a81b801ee6c1f643d1fa507c2372d43ccdf4922d3f7ab76a34442c96aee78a3afc4a47ba164d46c6b6b6451aeae78b711c44c118e584da742940f74af7bc9610 WHIRLPOOL a67392251e592df62deb3fe58dcc4eadd0d0b1fe0a09389e48f1f30a7c591343794d1e1b2a27467c0a0f5a0e84dd5a5fbdef538a5bcf1b80ba8972e6ec02fbcf
-EBUILD tophat-1.0.12.ebuild 948 SHA256 c850a45bf9b8463e7eddb461c9da4f84a3628579a56f335e0aeb138c358172b6 SHA512 15513bb5f6f3cd2a3bb3677b51fe689b358adb77bc511b4f0381794b8e1338c545d2d4d18427105112ebfd500fe0f90b8d22cbec31458f14f9ef8214f6ae211b WHIRLPOOL 300345f2477b5e7d9e1c17211ed4a5f4858714e5a4850a2e78681da8166a82bee09e9f762d6f8616e52ec98b07637e248ab0738484ca14da8d4b5256731fe3b0
+EBUILD tophat-1.0.12.ebuild 1075 SHA256 b838c333d7e07a06556acd94300fb3e00e76b8f9415ed7aa3f241099ef796fc0 SHA512 f497dd630259c88ea2f5e45b28497fb3074dc3c348d06327d4c2eded983dc4f8309d3046a8811cb611ee06ed1c5894173c67f52ab150c65ec4196c31411749e7 WHIRLPOOL cddc2948a3a9c100f87dea150d2bc55ccc191891838c174d18d23190bfaf133fab093cf7b985849927b7355012c3e7d4cd10a234c611710eef355384ac431186
 EBUILD tophat-1.4.1.ebuild 703 SHA256 02f1b01a315ec444948ec1bca8a66e24c14fab274cf58ab9d0815f1104d1498d SHA512 c317696046489b7555a56254b7dd6ea760cbd2034828bb75ab86672d203b23ca0bfc8e9a6ac868b13f7e8865d9006b5c5e0fed92064023be397482a65dc84561 WHIRLPOOL 00d02337391126e30d72419b8050fd0719f44155f977b8c7df1c966ddd6635d06b5b3d965cd967c8c36ad9ee5a767dd258f62df3a2dc994f747385686beaabd1
 EBUILD tophat-2.0.0.ebuild 752 SHA256 83e3db748159b21d7a8368949a2845ec98b44ba2c9b78211a3077bfa4580366e SHA512 7a8e526783b1522a0473610ca7b2746a7c8cfe9a7481f1714c11a92d26bb4060429274f1d20d1f532da7c5d37685c1f0ab487dc9b08ff9e39b063c10713325bf WHIRLPOOL fc5e129cdc70ebdf87c0bd2f4b049a9eee9a87852158f0a228eff616049f2e07b72b9c1a5fe12061c2b1330398af1046faaf0a52ab3f7a4830799b903e081c59
 EBUILD tophat-2.0.2.ebuild 745 SHA256 9310c42a36a69d1fc2cc879cf50864bcc35db2ae2f4a4593b25e1d402b09ab64 SHA512 e7c2ae8c28b04862cdbe692e1d728bb661e52d0bc4f774309729229dbacd467544f2148cdb45aebb51e394c25aae8a587c4dcb188575a0ff2bdef13bb7373eb0 WHIRLPOOL 2396eb1e9e9274d3471b57a4627dee824ffe5386ad8cba7d87be3197d73cc03d044c0dac06fc5ea68654f5d61722a2e960c14e379de3f4a7349147f456c1b6cf
 EBUILD tophat-2.0.8.ebuild 845 SHA256 e80806405eb0e4a9dbb3ce84c08e7f77c3a3fe3ddd1e9a71bca647fa1315e4bf SHA512 530fdd83f6c43e94adc38f5ab78df4e291e06d90fa088715427e03f1bd2480ba68e057333904c84a58cabc0aa251aa45538593f5a9b2402177622abbbc05686e WHIRLPOOL 334a439bf9057459fe7ef342f93b764fe07d1ba3d3268500eaae90643c7cbde27b9ead47b289fa83263c77f6c6999af762f6dbf7c5fe62a2549ffb8f7d1658f5
 EBUILD tophat-2.0.9.ebuild 981 SHA256 9185f5b81a05a1be619566ce0a504cbcb3cdb040d77f0f453efae289e2737d43 SHA512 37be753da3f1539d6726864a507183058a9c4e2fd9989b491f4be3098f65a9883671983440a194a46c1efb022af0b734618109175db4a3c0780329f7937c3b49 WHIRLPOOL 677e473310c7d288e8f3fabf22bec5039eea2f53eff9ff35e3c7f9f7e0b9f817a3697e4864cc95ed05f17f397758bf9353ffa54742dc2a01db2788d69b30dfcc
-MISC ChangeLog 2169 SHA256 76f0433b22c1c5c1407f67878e6d352e94a4d614ae96333a430b66bd1d934038 SHA512 b8ead8c84ed89b516ed8839fd862549f2baf75dabb7a922abfd6d5adc196b7173286946e8c3aa4539a0f7f4ca6e8589adfd74e306e5e985946b3afd00522eb0b WHIRLPOOL 158d593f0199d051138756714043a5eb8c6e965b34ff7d1b5f3af09ee48c947085b055c47124b73bfce0db42a5fe911fd59d8a1fccf8461982c1dfcc0fae2c94
+MISC ChangeLog 2311 SHA256 ed212288b9bba6915cf2b2dac62df1e6c63fe39ac7f2a5345d69b588be38fb67 SHA512 921263187faf2fdba63ea747c5431320290bf3980e313e34e935dbc9d8764b04186027dae1614f36e36c8e5fd27736dca542410a2919c07bc68df78174f5b139 WHIRLPOOL ae1e75a5aaf5e6ee2fd145e57f5227fa51d852cd6ef145da231a817dc723f5dea2f3dcebf17c5c1366029a518065594731ca60c7325e5eece517e1e47d8e9a63
 MISC metadata.xml 246 SHA256 0a6f02ccfb3c4276d398c803a9ba1acd5f1d665c27367b3374f37e3f20243038 SHA512 87e71ab4e7f1cadf71fb816efc3dc264f9beea32475d2a53f5084d6c578bf97df767a6ced30650a2436bdbbd535a4cdc298ff2d520e488d539bcd3130a787969 WHIRLPOOL 9f4b764db056117763124b2596be3b125419107243717474ab1cb31ee27f54ad6eb75789fdb9f59ff079c34715df87178566e3ac3ec55d940ae36ea6cfdef2e4
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQJ8BAEBCgBmBQJTGEQEXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirf8sP/0vACOlQ5JbDA5FQlocGs4P0
-O1InlqEOWH8qDRG+zf/3FdM7XslVS7LiAmoGaqOm4LJv2ctmfEMAdFUFiZ65H67l
-jM/5mLh1BPtkw/0fgKuYqWLYDvRowDPzrNu9ojrVS6q5Qn3ANpoT2kZMV7IF5A1d
-WGFcE12TARErSNsUW5atSyhp5YvJ0k7WdmJtOsop9E2S5FRfyv39VRzFJliwfQ4r
-inzHppbHELDPS39b0yik0nuQAZBrEF8HUE9gaMZHF8bMt6G/Irzrezfd+092+PWU
-Sphe9p4a1mU7XFduJI0kSKgpjdzzt6vyyCiA2Y7tX1MENuMJCBTtApB0YAYzaIVC
-1PmOPMne/MW5mhm2tEhAd4J56xh6WpQdew6KCQvfblUDCijzfi/laQKSUBDMIrf1
-lOosLZ4KB62LLigKmpP8TnOX6hvSBQgFVBDjfbx41rC1GvrjUTfolxWUhOHPfCdG
-fIKhm7Y+tr0C6H9TFfNsgxmkv/8Z38rM0LN69rOc6qqwHcr28RyqhZHFq1g5y7ds
-C6IUKp/cXEDBL3zzqG5j1jtAOAmn9raRGduF54iW8WRnppssF2a4ErLYaSO1VNll
-1tAReziWVSzv2UqbezCk5v4oGn7Lg549PnQdilC0PuWajVZL/0JetuUoAbH479uH
-Mi1muXQHNDdJ3EVMQr8I
-=qGGs
+iQEcBAEBCAAGBQJUQM5DAAoJECo/aRed9267eMEH/2uyNgGkt1vyleRPTs0oDWSj
+NcpmwZCvyaMD3WE+ahl1ogEfX7mSUOlNhxCCqgfCjVoaTIfUUUpS+HqAKxCAn3zZ
+wsM9G24AfHOss8SRQWcfKk3p1RGKsCV665GRosqcwyiobgQxa3g7PxEK8w2pZXw0
+cmeztEFlD2e6VuQEfG7Dwr025niA2uUHBRXBAJXz/05tyOit00UWifI7Z2uIsHsy
+2pfSmzUK2uM9E/Xac2XkplY92HqFffx9JpEoDGg8HB8cju98jS/TH+ldcYN9oFac
+HWYwaahdT98xvziabDTGYuynIcHuv1sYfkd7e4ATTddamFSp82mKc5KJDcuNC3g=
+=js0Q
 -----END PGP SIGNATURE-----
