@@ -1,6 +1,9 @@
 # ChangeLog for sci-biology/tophat
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/tophat/ChangeLog,v 1.12 2014/03/06 09:46:50 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/tophat/ChangeLog,v 1.13 2014/10/17 08:07:31 pinkbyte Exp $
+
+  17 Oct 2014; Sergey Popov <pinkbyte@gentoo.org> tophat-1.0.12.ebuild:
+  Non-maintainer commit: fix building, approved by Justin Lecher
 
 *tophat-2.0.9 (06 Mar 2014)
 
