@@ -1,6 +1,10 @@
 # ChangeLog for net-print/cups
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-print/cups/ChangeLog,v 1.647 2014/10/16 22:39:19 tamiko Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-print/cups/ChangeLog,v 1.648 2014/10/17 08:30:50 tamiko Exp $
+
+  17 Oct 2014; Matthias Maier <tamiko@gentoo.org> cups-2.0.0-r2.ebuild,
+  cups-9999.ebuild:
+  do not install bogus xinetd files if USE=-xinetd; bug 525604
 
   16 Oct 2014; Matthias Maier <tamiko@gentoo.org> cups-1.7.5-r2.ebuild,
   cups-2.0.0-r2.ebuild:
